--- a/style.css
+++ b/style.css
@@ -1,8 +1,166 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
+
+
+/*ESTILOS MOBILE*/
+
+@media (max-width:1024px)  {
+
+  /*estilos home*/
+  #home{
+    height: 100%;
+    width: 100%;
+    background-color:#f0f2f2;
+  }
+  
+  #home .header img{
+    display: block;
+    display: none;
+    width: 100%;
+    min-width: 320px;
+  }
+
+  /*estilos about*/
+  #about{
+    padding: 20% 0% 5% 0%;
+    width: 100%;
+    background-color:#f0f2f2;
+  }
+  #about .about-box .container-titulo-about h1{
+    font-size: 1.3rem;
+  }
+  #about .about-box .container-titulo-about h2{
+    font-size: 1.2em;
+  }
+  #about .about-box .container-parrafo-about p {
+    padding: 5px auto 5px auto;
+    font-size: 0.7rem;
+    line-height: 1,0.5rem;
+  }
+
+  /*estilos experiencia*/
+  #experiencia{
+    width: 100%;
+    background-color:#e7e9e9;
+    padding: 20% 0% 5% 0%;
+  }
+
+  #experiencia .about-box .container-titulo-about h2{
+    font-size: 1.2rem;
+  }
+  #experiencia .about-box .container-titulo-about h3{
+    font-size: 0.8rem;
+  }
+
+  /*estilos proyectos*/
+
+  #proyectos .starealacris{
+    padding-top: 20%;
+  }
+
+  #proyectos .titulo-proyectos h2{
+    font-size: 1.2rem;
+  }
+  /*estilos jack*/
+  #jack {
+    background-image: url(img/proyectos/fond-4.png);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    padding-top: 27%;
+  }
+
+  #jack .about-box .container-titulo-about h2{
+    font-size: 1.2rem;
+  }  
+   /*estilos x treme*/
+  #xtremebox {
+    background-image: url(img/proyectos/fond-4.png);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    padding-top: 27%;
+  }
+
+  #xtremebox .about-box .container-titulo-about h2{
+    font-size: 1.2rem;
+  }
+   /*estilos bajo tierra*/
+  #bajotierra{
+    background-image: url(img/proyectos/fond-4.png);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    padding-top: 27%;
+  }
+  #bajotierra .about-box .container-titulo-about h2{
+    font-size: 1.2rem;
+  }
+   /*estilos nueva zelanda*/
+  #nuevazelanda{
+    background-image: url(img/proyectos/fond-4.png);
+    background-attachment: fixed;
+    background-position: center;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
+    padding-top: 27%;
+  }
+  #nuevazelanda .about-box .container-titulo-about h2{
+    font-size: 1.2rem;
+  }
+
+  /*estilos titulos galeria*/
+  #titulogaleria .galeria h2{
+    font-size: 1.2rem;
+  }
+  /*estilos galeria*/
+  #galeria {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    height: 100%;
+    background: #e2e0e0;
+    padding: 5% 0%;
+  }
+  #galeria .carrusel-conteiner{
+     margin-top: 6px;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* declaracion tipografia body */
 body h1{
@@ -26,7 +184,11 @@ body{
     font-size: 12px;
     line-height: 1.1rem;
 }
-/*HEADER*/
+
+
+
+
+/*NAV*/
 .menu {
   width: 100%;
   height: 75px;
@@ -110,7 +272,7 @@ body{
     transition: 0.5s;
     cursor: pointer;
   }
-  .btn-menu > .fa-caret-down:hover {
+  .btn-menu > .fa-caret-down:hover{
     color: #217073;
   }
 
@@ -160,10 +322,14 @@ body{
     color: #fff;
   }
 }
+
+/*estilos HOME*/
+
 #home{
      width: 100%;
      background-color:#f0f2f2;
 }
+
 #home .header{
   width: 100%;
   display: flex;
@@ -178,21 +344,35 @@ body{
   border-bottom: 2px solid #fd4823;
 }
 
+#home .header-2 {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+#home .header-2 img{
+  width: 80%;
+  min-width: 320px;
+  border-bottom: 2px solid #fd4823;
+}
+
+
 /* estilos ABOUT */
 #about .about-box{
   width: 100%;
   background-color:#f0f2f2;
-  padding-top: 1em;
-  padding-bottom: 2rem;
+  padding: 5% 0%;
 }
 
 #about .about-box .container-titulo-about{
   width: 100%;
-  padding: 2%;
   display: flex;
   justify-content: center;
   flex-direction: row;
   align-items: center;
+  padding-top: 1%;
 }
 
 #about .about-box .container-titulo-about h1{
@@ -202,7 +382,6 @@ body{
 
 #about .about-box .container-parrafo-about{
   width: 100%;
-  padding: 2%;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -210,17 +389,58 @@ body{
 }
 
 #about .about-box .container-titulo-about h2{
-  color: #f9482e;
+  color: #fd4823;
   text-align: center;
 }
 
 #about .about-box .container-parrafo-about p{
   width: 80%;
   text-align: justify;
+  color: #333232;
+  padding-top: 1%;
+}
+
+/* estilos EXPERIENCIA */
+#experiencia .about-box{
+  width: 100%;
+  background-color:#e7e9e9;
+  padding: 5% 0%;
+}
+
+#experiencia .about-box .container-titulo-about{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+}
+
+#experiencia .about-box .container-parrafo-about{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+#experiencia .about-box .container-titulo-about h2{
+  color: #00aac7;
+  text-align: center;
+  font-weight: normal;
+}
+
+#experiencia .about-box .container-titulo-about h3{
+  color: #fb6f33;
+  text-align: center;
+}
+
+#experiencia .about-box .container-parrafo-about p{
+  width: 80%;
+  text-align: justify;
+  color: #333232;
 }
 
 /* estilos PROYECTOS */
-
 #proyectos{
   background-image: url(img/proyectos/fond-2.png);
 	background-attachment: fixed;
@@ -228,7 +448,7 @@ body{
 	background-size: cover;
 	height: 100%;
 	width: 100%;
-  padding-top: 5rem;
+  padding-top: 5.5%;
 }
 
 #proyectos .starealacris{
@@ -255,18 +475,18 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 4rem;
+    padding-top: 4rem;
+    padding-bottom: 6rem;
 }
 
 #proyectos .box-proyectos .proyectos-imgcontainer {
     width: 90%;
     display: grid;
     justify-content: center;
-    grid-template-columns: 33% 33% 33%;
+    grid-template-columns: 30% 30%;
     grid-template-rows: 45% 45%;
     grid-column-gap: 20px;
     grid-row-gap: 40px;
-    justify-items: center;
     align-items: center;
 }
 
@@ -280,279 +500,311 @@ body{
     opacity: 80%;
 }
 
-/* estilo seccion jack*/
+/* estilo seccion JACK*/
 
 #jack{
-  background-image: url(img/proyectos/fond-2.png);
+  background-image: url(img/proyectos/fond-4.png);
   background-attachment: fixed;
-	background-position: center;
-	background-size: cover;
-	height: 100%;
-	width: 100%;
-  padding-top: 5%;
+  background-position: center;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
 }
 
-#jack .box-proyectos{
-  width: 80%;
-}
-
-#jack .box-proyectos .contenedor-jack{
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 30% 30%;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-  justify-items: center;
-  align-items: center;
-  text-align: center;
-}
-
-.texto-jack h3{
-color: #fff;
-font-weight: normal ;  
-}
-
-.texto-jack h2{
-  padding: 0% 0% 0% 30%;
-  align-items: center;
-  text-align: center;
-  color: #fff;
-  font-weight: bold;  
-}
-
-.texto-jack p{
-    padding: 0 0% 0 40% ;
-}
-
-.img-jack img{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 10% 0 40%;
-}
-
-/* estilo seccion xtreme box*/
-
-#xtremebox{
-  background-image: url(img/proyectos/fond-2.png);
-  background-attachment: fixed;
-	background-position: center;
-	background-size: cover;
-	height: 100%;
-	width: 100%;
-  padding-top: 5%;
-}
-
-#xtremebox .box-proyectos{
-  width: 80%;
-}
-
-#xtremebox .box-proyectos .contenedor-jack{
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 30% 30%;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-  justify-items: center;
-  align-items: center;
-}
-
-.texto-jack h3{
-padding: 0% 0% 0% 30%;
-align-items: center;
-text-align: center;
-color: #fff;
-font-weight: normal ;  
-}
-
-.texto-jack h2{
-  padding: 0% 0% 0% 30%;
-  align-items: center;
-  text-align: center;
-  color: #fff;
-  font-weight: bold;  
-}
-
-.texto-jack p{
-    padding: 0 0% 0 40% ;
-}
-
-.img-jack img{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 10% 0 40%;
-}
-
-/* estilo seccion la dama*/
-
-#ladama{
-  background-image: url(img/proyectos/fond-2.png);
-  background-attachment: fixed;
-	background-position: center;
-	background-size: cover;
-	height: 100%;
-	width: 100%;
-  padding-top: 5%;
-}
-
-#ladama .box-proyectos{
-  width: 80%;
-}
-
-#ladama .box-proyectos .contenedor-jack{
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 30% 30%;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-  justify-items: center;
-  align-items: center;
-}
-
-.texto-jack h3{
-padding: 0% 0% 0% 30%;
-align-items: center;
-text-align: center;
-color: #fff;
-font-weight: normal ;  
-}
-
-.texto-jack h2{
-  padding: 0% 0% 0% 30%;
-  align-items: center;
-  text-align: center;
-  color: #fff;
-  font-weight: bold;  
-}
-
-.texto-jack p{
-  padding: 0 0% 0 40% ;
-}
-
-.img-jack img{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 10% 0 40%;
-}
-
-/* estilo seccion la bajo tierra*/
-#bajotierra{
-  background-image: url(img/proyectos/fond-2.png);
-  background-attachment: fixed;
-	background-position: center;
-	background-size: cover;
-	height: 100%;
-	width: 100%;
-  padding-top: 5%;
-}
-
-#bajotierra .box-proyectos{
-  width: 80%;
-}
-
-#bajotierra .box-proyectos .contenedor-jack{
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 30% 30%;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-  justify-items: center;
-  align-items: center;
-}
-
-.texto-jack h3{
-padding: 0% 0% 0% 30%;
-align-items: center;
-text-align: center;
-color: #fff;
-font-weight: normal ;  
-}
-
-.texto-jack h2{
-  padding: 0% 0% 0% 30%;
-  align-items: center;
-  text-align: center;
-  color: #fff;
-  font-weight: bold;  
-}
-
-.texto-jack p{
-  padding: 0 0% 0 40% ;
-}
-
-.img-jack img{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 10% 0 40%;
-}
-
-/* estilo seccion nueva zelanda*/
-#nuevazelanda{
-  background-image: url(img/proyectos/fond-2.png);
-  background-attachment: fixed;
-	background-position: center;
-	background-size: cover;
-	height: 100%;
-	width: 100%;
+#jack .about-box{
+  width: 100%;
   padding-top: 5%;
   padding-bottom: 2%;
 }
 
-#nuevazelanda .box-proyectos{
-  width: 80%;
-} 
-
-#bajotierra .box-proyectos .contenedor-jack{
-  display: grid;
-  grid-template-columns: 100%;
-  grid-template-rows: 30% 30%;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-  justify-items: center;
-  align-items: center;
-}
-
-.texto-jack h3{
-padding: 0% 0% 0% 30%;
-align-items: center;
-text-align: center;
-color: #fff;
-font-weight: normal ;  
-}
-
-.texto-jack h2{
-  padding: 0% 0% 0% 30%;
-  align-items: center;
-  text-align: center;
-  color: #fff;
-  font-weight: bold;  
-}
-
-.texto-jack p{
-  padding: 0 0% 0 40% ;
-}
-
-.img-jack img{
+#jack .about-box .container-titulo-about{
+  width: 100%;
   display: flex;
   justify-content: center;
+  flex-direction: row;
   align-items: center;
-  padding: 0 10% 0 40%;
 }
 
-/* CAROUSEL */
+#jack .about-box .container-titulo-about h3{
+  color: #fff;
+  text-align: center;
+  font-weight: normal;
+}
+
+#jack .about-box .container-titulo-about h2{
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+}
+
+#jack .about-box .container-parrafo-about{
+  width: 100%;
+  padding: 2%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+}
+
+#jack .about-box .container-parrafo-about p{
+  width: 80%;
+  text-align: justify;
+  color: #292828;
+}
+
+#jack .img-box{
+  width: 100%;
+  height: 100%;
+}
+
+#jack .img-box .img-contenedor{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+#jack .img-box .img-contenedor img{
+  width: 45%;
+}
+
+
+/* estilo seccion XTREME BOX*/
+
+#xtremebox{
+  background-image: url(img/proyectos/fond-4.png);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+}
+
+#xtremebox .about-box{
+  width: 100%;
+  padding-top: 5%;
+  padding-bottom: 2%;
+}
+
+#xtremebox .about-box .container-titulo-about{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+}
+
+#xtremebox .about-box .container-titulo-about h3{
+  color: #fff;
+  text-align: center;
+  font-weight: normal;
+}
+
+#xtremebox .about-box .container-titulo-about h2{
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+}
+
+
+#xtremebox .about-box .container-parrafo-about{
+  width: 100%;
+  padding: 2%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+}
+
+#xtremebox .about-box .container-parrafo-about p{
+  width: 80%;
+  text-align: justify;
+  color: #292828;
+}
+
+#xtremebox .img-box{
+  width: 100%;
+  height: 100%;
+}
+
+#xtremebox .img-box .img-contenedor{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+#xtremebox .img-box .img-contenedor img{
+  width: 45%;
+}
+
+
+/* estilo seccion BAJO TIERRA*/
+
+#bajotierra{
+  background-image: url(img/proyectos/fond-4.png);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+}
+
+#bajotierra .about-box{
+  width: 100%;
+  padding-top: 5%;
+  padding-bottom: 2%;
+}
+
+#bajotierra .about-box .container-titulo-about{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+}
+
+#bajotierra .about-box .container-titulo-about h3{
+  color: #fff;
+  text-align: center;
+  font-weight: normal;
+}
+
+#bajotierra .about-box .container-titulo-about h2{
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+}
+
+#bajotierra .about-box .container-parrafo-about{
+  width: 100%;
+  padding: 2%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+}
+
+#bajotierra .about-box .container-parrafo-about p{
+  width: 80%;
+  text-align: justify;
+  color: #292828;
+}
+
+#bajotierra .img-box{
+  width: 100%;
+  height: 100%;
+}
+
+#bajotierra .img-box .img-contenedor{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+#bajotierra .img-box .img-contenedor img{
+  width: 45%;
+}
+
+
+/* estilo seccion NUEVA ZELANDA*/
+
+#nuevazelanda{
+  background-image: url(img/proyectos/fond-4.png);
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  height: 100%;
+  width: 100%;
+}
+
+#nuevazelanda .about-box{
+  width: 100%;
+  padding-top: 5%;
+  padding-bottom: 2%;
+}
+
+#nuevazelanda .about-box .container-titulo-about{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+}
+
+#nuevazelanda .about-box .container-titulo-about h3{
+  color: #fff;
+  text-align: center;
+  font-weight: normal;
+}
+
+#nuevazelanda .about-box .container-titulo-about h2{
+  color: #fff;
+  text-align: center;
+  font-weight: bold;
+}
+
+#nuevazelanda .about-box .container-parrafo-about{
+  width: 100%;
+  padding: 2%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  color: #fff;
+}
+
+#nuevazelanda .about-box .container-parrafo-about p{
+  width: 80%;
+  text-align: justify;
+  color: #292828;
+}
+
+#nuevazelanda .img-box{
+  width: 100%;
+  height: 100%;
+}
+
+#nuevazelanda .img-box .img-contenedor{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+#nuevazelanda .img-box .img-contenedor img{
+  width: 45%;
+  padding-bottom: 3%;
+}
+
+
+/* estilos CAROUSEL */
 #titulogaleria{
   width: 100%;
-  padding: 5% 0 0 0;
-  display: flex;
-  justify-content: center;
+  height: 100%;
+  padding: 2%;
+  background: #f1efee;
+  padding: 5% 0% 2% 0%;
 }
 
-#titulogaleria h2{
+#titulogaleria .galeria{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+#titulogaleria .galeria h2{
   color: #217073;
-  font-weight: bold;
+  font-weight: bold; 
 }
 
 #galeria {
@@ -560,30 +812,40 @@ font-weight: normal ;
     justify-content:center;
     align-items: center;
     margin: 0 auto;
-    height: 100vh;
+    height: 100%;
+    background: #e2e0e0;
 }
 
 #galeria .carrusel-conteiner {
     width:60%;
-    margin-top: 5%;
+    margin: 5%;
+    height: 80%;
 }
 
 #galeria .carrusel-conteiner #photo-services {
     width: 70%;
 }
 
-#galeria {
-    display: flex;  
-    justify-content:center;
-    align-items: center;
-    margin: 0 auto;
-    height: 100vh;
+/*estilos FOOTER*/
+
+footer{
+  background:#fd4823;
+  width: 100%;
+  height:100%;
+  padding: 10px 0;
 }
 
-#galeria .carrusel-conteiner {
-    width:60%;
-    height: 80%;
-    margin-top: 20px;
+.footer-box{
+   width: 100%;
+   display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-box .starealacris h2{
+  color: #fff;
+  font-size: 13px;
+  text-align: center;
 }
 
 
@@ -623,24 +885,17 @@ font-weight: normal ;
 
 
 
+/*ESTILOS DESKTOP*/
 
+@media (min-width: 961px) {
 
-
-
-
-
-
-/*ESTILOS MOBILE*/
-
-@media (max-width:1024px)  {
-  #about .about-box .container-parrafo-about:before p {
-    font-size: 1.6rem;
+  #home .header-2 img{
+     display: block;
+    display: none;
   }
-  #about .about-box .container-parrafo-about p {
-    padding: 5px auto 5px auto;
-  }
-  #home .header img{
-    width: 100%;
-    min-width: 320px;
-  }
+
+
 }
+
+
+
